--- a/source-checker/SourceChecker.csproj
+++ b/source-checker/SourceChecker.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Octokit" Version="14.0.0" />
     <PackageReference Include="SingBoxLib" Version="1.1.11" />
   </ItemGroup>
 
