Test CommitResultsFromFile new code

--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -29,7 +29,7 @@ jobs:
       LitePath: Asset/lite
       LiteConfigPath: Asset/config.json
       IncludedProtocols: "ss,trojan,vmess,vless"
-      V2rayFormatResultPath: Asset/list.txt
+      V2rayFormatResultPath: Asset
       SourcesFile: Asset/sources.txt
       GeoLiteCountryDbPath: Asset/GeoLite2-Country.mmdb
       GeoLiteAsnDbPath: Asset/GeoLite2-ASN.mmdb
