--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -21,8 +21,7 @@ jobs:
         run: |
           export TZ="Asia/Jakarta"
           sudo locale-gen id_ID.UTF-8
-          echo "BUILDTIME=$(LC_TIME=id_ID.UTF-8 date '+%A, %d %B %Y - %H:%M:%S')" >> $GITHUB_ENV
-          echo "TAG_NAME=$(date +'%d%m%Y-%H%M')" >> $GITHUB_ENV
+          echo "BUILDTIME=$(LC_TIME=id_ID.UTF-8 date '%a, %d/%m/%Y - %H:%M:%S')" >> $GITHUB_ENV
           echo "OISD_SMALL=https://small.oisd.nl/dnsmasq" >> $GITHUB_ENV
           echo "OISD_NSFW=https://nsfw.oisd.nl/dnsmasq" >> $GITHUB_ENV
           echo "OISD_NSFW_SMALL=https://nsfw-small.oisd.nl/dnsmasq" >> $GITHUB_ENV
