--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           export TZ="Asia/Jakarta"
           sudo locale-gen id_ID.UTF-8
-          echo "BUILDTIME=$(LC_TIME=id_ID.UTF-8 date '+%A, %d %B %Y - %H:%M:%S')" >> $GITHUB_ENV
+          echo "BUILDTIME=$(LC_TIME=id_ID.UTF-8 date '+%a, %d/%m/%Y - %H:%M:%S')" >> $GITHUB_ENV
 
       - uses: actions/checkout@v5
       - name: Setup .NET
