--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -67,6 +67,7 @@ jobs:
           
           # Salin aset untuk diterbitkan
           cp geolite2/GeoLite2-ASN.mmdb ../Publish/GeoLite2-ASN.mmdb
+          cp geolite2/GeoLite2-Country.mmdb ../Publish/GeoLite2-ASN.mmdb
           
           # Jalankan pembangunan
           go mod tidy
