--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -29,6 +29,7 @@ jobs:
       LitePath: Asset/lite
       LiteConfigPath: Asset/config.json
       IncludedProtocols: "ss,trojan,vmess,vless"
+      IncludedCountry: "HK,GB,IN,JP,MY,NL,SG,TW,VE,VN"
       SourcesFile: Asset/sources.txt
       GeoLiteCountryDbPath: Asset/GeoLite2-Country.mmdb
       GeoLiteAsnDbPath: Asset/GeoLite2-ASN.mmdb
@@ -90,6 +91,7 @@ jobs:
         if: ${{ !hashFiles('source/proxy-build/skip_push.flag') }}
         run: |
           mkdir -p asset/Proxy
+          cp source/proxy-build/raven.json asset/Proxy/
           cp source/proxy-build/{list.txt,all_list.txt} asset/Proxy/
 
       - name: Commit & push Proxy
