--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -65,12 +65,16 @@ jobs:
 
           dotnet restore
           dotnet run --configuration Release --project .
+          readlink -f list.txt
 
       - name: Build sing-box configuration
         run: |
           cd source/proxy-build/Asset
-          pip install geoip2
+          pip install geoip2 -q
           python generate_singbox_config.py
+          ls
+          readlink -f raven.json
+          pwd
           
           cd ../..
 
