--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -65,6 +65,8 @@ jobs:
 
           dotnet restore
           dotnet run --configuration Release --project .
+          pwd
+          readlink -f list.txt
 
       - name: Build sing-box configuration
         run: |
