--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -28,7 +28,7 @@ jobs:
       EnableDebug: ${{ github.event.inputs.debug || 'false' }}
       LitePath: Asset/lite
       LiteConfigPath: Asset/config.json
-      IncludedProtocols: "ss,trojan"
+      IncludedProtocols: "ss"
       IncludedCountry: "HK,GB,IN,JP,MY,NL,SG,TW,VE,VN"
       SourcesFile: Asset/sources.txt
       GeoLiteCountryDbPath: Asset/GeoLite2-Country.mmdb
