--- a/.github/workflows/sources_check.yml
+++ b/.github/workflows/sources_check.yml
@@ -31,7 +31,7 @@ jobs:
       LitePath: Asset/lite
       LiteConfigPath: Asset/config.json
       MinActiveProxies: 5
-      IncludedProtocols: "ss,trojan,vmess,vless"
+      IncludedProtocols: "ss,trojan,vmess"
       SourcesFile: Asset/sources.txt
 
     steps:
