--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MaxProxiesPerCountry: 3
-      MinActiveProxies: 100
+      MinActiveProxies: 10
       MaxThreadCount: 96
       Timeout: 5000
       SingboxPath: sing-box
@@ -75,6 +75,7 @@ jobs:
           dotnet run --configuration Release --project .
 
       - name: Build sing-box configuration
+        if: ${{ !hashFiles('source/proxy-build/skip_push.flag') }}
         run: |
           cd source/proxy-build/Asset
           pip install geoip2 -q
