--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Prepare local repo for 'asset' branch (create if missing)
         if: ${{ !hashFiles('source/proxy-build/skip_push.flag') }}
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.AUTH_PAT }}
         run: |
           rm -rf asset
           mkdir -p asset
