--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -25,6 +25,19 @@ jobs:
     runs-on: ubuntu-latest
     env:
       EnableDebug: ${{ github.event.inputs.debug || 'false' }}
+      GeoLiteAsnDbPath: Asset/GeoLite2-ASN.mmdb
+      GeoLiteCountryDbPath: Asset/GeoLite2-Country.mmdb
+      IncludedCountry: "IN,JP,MY,NL,SG,TW,TH,VE,VN"
+      IncludedProtocols: "ss,trojan,vmess,vless"
+      LiteConfigPath: Asset/config.json
+      LitePath: Asset/lite
+      MaxProxiesPerCountry: 3
+      MaxThreadCount: 128
+      MinActiveProxies: 100
+      SingboxPath: sing-box
+      SourcesFile: Asset/sources.txt
+      Timeout: 15000
+      V2rayFormatResultPath: Asset/singlist.txt
 
     steps:
       - name: Set variables
